<resources>
    <string name="app_name">AQP ROAD</string>
    <string name="enter_your_username">Ingrese su usuario</string>
    <string name="username">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="enter_your_password">Ingrese su contraseña</string>
    <string name="login">Iniciar sesión</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="don_t_have_an_account_yet_register">Nuevo en AQP ROAD? Registrate</string>
    <string name="recordarme_en_este_dispositivo">Recordarme en este dispositivo</string>
    <string name="back_arrow">back arrow</string>
    <string name="molinos_de_sabandia">Molinos de Sabandia</string>
    <string name="vamos_all">Vamos allá!</string>
    <string name="back_button">Back button</string>
    <string name="mas_vistos">Más vistos</string>
    <string name="cercanos">Cercanos</string>
    <string name="Ultimos">Ultimos</string>
    <string name="listar">Listar</string>
    <string name="ir">Ir></string>
    <string name="detalles_cuenta">Detalles cuenta</string>
    <string name="titulo_sitio">Titulo del sitio</string>
    <string name="correo">Correo:</string>
    <string name="correo2">Correo</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usuario">Usuario:</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="editar_usuario">Editar usuario</string>
    <string name="guardar_usuario">Guardar usuario</string>

</resources>