<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home.UserFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detalles_cuenta"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgUser"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/ic_user"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

    <TextView
        android:id="@+id/txtUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usuario"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUser" />

    <TextView
        android:id="@+id/txtDbUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="16sp"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgUser" />

    <TextView
        android:id="@+id/txtCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUser" />

    <TextView
        android:id="@+id/txtDbCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correo2"
        android:textSize="16sp"
        android:gravity="end"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDbUser" />


</androidx.constraintlayout.widget.ConstraintLayout>