<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    tools:context=".Login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/cardview_border" />
    </androidx.cardview.widget.CardView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_marginTop="120dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardView" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iptUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_username"
        app:boxStrokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtUsername" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iptUsername" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/iptPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_password"
        app:boxStrokeWidth="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtPassword" >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/lytRecordar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iptPassword"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/checkbox_color" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtRecordar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recordarme_en_este_dispositivo"
            android:textColor="@color/black" />

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="end"
        android:textColor="@color/black"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lytRecordar"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtForgotPassword" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="O"
        android:gravity="center"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txto"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/extraRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/don_t_have_an_account_yet_register" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>