<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragmentLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_login"
    tools:context=".Login.FragmentLogin">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/cardview_border" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="29dp"
            android:layout_marginTop="233dp"
            android:text="Te damos"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUserLogin"
            android:layout_width="250dp"
            android:layout_height="41dp"
            android:layout_marginTop="336dp"
            android:background="@drawable/login_rounded_edit_text"
            android:hint="Ingrese su usuario"
            android:inputType="text"
            android:textAlignment="viewStart"
            android:textColorHint="#575757"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtUsername"
            android:layout_width="61dp"
            android:layout_height="21dp"
            android:layout_marginStart="83dp"
            android:layout_marginTop="315dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtPassword"
            android:layout_width="79dp"
            android:layout_height="24dp"
            android:layout_marginStart="83dp"
            android:layout_marginTop="387dp"
            android:gravity="clip_vertical|center_horizontal"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:layout_marginTop="411dp"
            app:endIconMode="password_toggle"
            app:endIconTint="#575757"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputPasswordLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_rounded_edit_text"
                android:gravity="center_vertical"
                android:hint="Ingrese su contraseña"
                android:inputType="textPassword"
                android:textColorHint="#575757"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="483dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLoginNormal"
            android:layout_width="250dp"
            android:layout_height="41dp"
            android:layout_marginTop="521dp"
            android:background="@drawable/login_rounded_button_normal"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLoginFacebook"
            android:layout_width="250dp"
            android:layout_height="41dp"
            android:layout_marginTop="635dp"
            android:background="@drawable/login_rounded_button_facebook"
            android:drawableLeft="@drawable/logo_facebook"
            android:gravity="center_vertical"
            android:text="Continuar con Facebook"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="250dp"
            android:layout_height="41dp"
            android:layout_marginTop="587dp"
            android:background="@drawable/login_rounded_button_google"
            android:drawableLeft="@drawable/logo_google"
            android:drawablePadding="2dp"
            android:gravity="center_vertical"
            android:paddingRight="15dp"
            android:text="Continuar con Google"
            android:textColor="#575757"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/txtForgotPassword2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="568dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="O"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="la bienvenida"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.098"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView" />

        <TextView
            android:id="@+id/txtRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="264dp"
            android:layout_marginTop="696dp"
            android:text="Registrate"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="86dp"
            android:layout_marginTop="696dp"
            android:text="¿Nuevo en AQP ROAD?"
            android:textColor="#575757"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>